feat: update fhir profile and byUid variant added to account/ group endpoints
