# swagger.json
@@ -144,7 +144,7 @@
           },
           "id": {
             "type": "number",
-            "example": 910
+            "example": 359
           },
           "category": {
             "$ref": "#/components/schemas/'allergy'",
@@ -182,7 +182,7 @@
         "properties": {
           "id": {
             "type": "number",
-            "example": 321
+            "example": 152
           },
           "key": {
             "type": "string",
@@ -245,7 +245,7 @@
           },
           "id": {
             "type": "number",
-            "example": 33
+            "example": 650
           },
           "category": {
             "$ref": "#/components/schemas/'allergy'",
@@ -264,7 +264,7 @@
           },
           "user_id": {
             "type": "number",
-            "example": 32
+            "example": 84
           }
         },
         "description": "UserCondition (Model)"
@@ -329,12 +329,12 @@
         "properties": {
           "id": {
             "type": "number",
-            "example": 282,
+            "example": 56,
             "required": true
           }
         },
         "example": {
-          "id": 282
+          "id": 56
         },
         "description": "idParamValidator (Validator)"
       },
@@ -362,14 +362,14 @@
               "properties": {
                 "code": {
                   "type": "number",
-                  "example": 605,
+                  "example": 982,
                   "required": true
                 },
                 "textValues": {
                   "type": "array",
                   "items": {
                     "type": "number",
-                    "example": 574
+                    "example": 537
                   },
                   "required": true
                 }
@@ -403,6 +403,50 @@
           ]
         },
         "description": "updateConditions (Validator)"
+      },
+      "updateProfile": {
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "type": "string",
+            "example": "Lorem Ipsum",
+            "required": true
+          },
+          "surnames": {
+            "type": "string",
+            "example": "Lorem Ipsum",
+            "required": true
+          },
+          "biologicalSex": {
+            "type": "number",
+            "example": 152,
+            "choices": [
+              "M",
+              "F"
+            ],
+            "required": true
+          },
+          "language": {
+            "type": "string",
+            "example": "Lorem Ipsum",
+            "required": true,
+            "minLength": 2,
+            "maxLength": 5
+          },
+          "bloodType": {
+            "type": "string",
+            "example": "Lorem Ipsum",
+            "required": true
+          }
+        },
+        "example": {
+          "firstName": "Lorem Ipsum",
+          "surnames": "Lorem Ipsum",
+          "biologicalSex": 152,
+          "language": "Lorem Ipsum",
+          "bloodType": "Lorem Ipsum"
+        },
+        "description": "updateProfile (Validator)"
       },
       "adminSignupValidator": {
         "type": "object",
@@ -516,7 +560,7 @@
           },
           "role": {
             "type": "number",
-            "example": 35,
+            "example": 695,
             "choices": [
               "Patient",
               "Practitioner"
@@ -542,7 +586,7 @@
           "firstName": "Lorem Ipsum",
           "surnames": "Lorem Ipsum",
           "email": "Lorem Ipsum",
-          "role": 35,
+          "role": 695,
           "password": "Lorem Ipsum",
           "passwordConfirmation": "Lorem Ipsum"
         },
@@ -595,7 +639,7 @@
                 "firstName": "Lorem Ipsum",
                 "surnames": "Lorem Ipsum",
                 "email": "Lorem Ipsum",
-                "role": 35,
+                "role": 695,
                 "password": "Lorem Ipsum",
                 "passwordConfirmation": "Lorem Ipsum"
               }
@@ -782,6 +826,57 @@
             ]
           }
         ]
+      },
+      "put": {
+        "summary": "Update patient FHIR profile (updateProfile)",
+        "description": "\n\n _app/controllers/profile_controller.ts_ - **updateProfile**",
+        "parameters": [],
+        "tags": [
+          "ACCOUNT"
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                },
+                "example": {}
+              }
+            },
+            "description": "Returns **200** (OK) as **application/json**"
+          },
+          "401": {
+            "description": "Returns **401** (Unauthorized)"
+          },
+          "403": {
+            "description": "Returns **403** (Forbidden)"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": [
+              "access"
+            ]
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/updateProfile"
+              },
+              "example": {
+                "firstName": "Lorem Ipsum",
+                "surnames": "Lorem Ipsum",
+                "biologicalSex": 152,
+                "language": "Lorem Ipsum",
+                "bloodType": "Lorem Ipsum"
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/account/by-email/{email}": {
@@ -816,6 +911,68 @@
             ]
           }
         ]
+      }
+    },
+    "/api/v1/account/profile/uid/{userUid}": {
+      "put": {
+        "summary": "Update patient FHIR profile by user UID (updateProfileByUid)",
+        "description": "\n\n _app/controllers/profile_controller.ts_ - **updateProfileByUid**",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userUid",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "tags": [
+          "ACCOUNT"
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                },
+                "example": {}
+              }
+            },
+            "description": "Returns **200** (OK) as **application/json**"
+          },
+          "401": {
+            "description": "Returns **401** (Unauthorized)"
+          },
+          "403": {
+            "description": "Returns **403** (Forbidden)"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": [
+              "access"
+            ]
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/updateProfile"
+              },
+              "example": {
+                "firstName": "Lorem Ipsum",
+                "surnames": "Lorem Ipsum",
+                "biologicalSex": 152,
+                "language": "Lorem Ipsum",
+                "bloodType": "Lorem Ipsum"
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/bracelet": {
